exports[`no-test-return-statement > invalid(1): import {test, it} from 'node:test';\ntest(\"x\", () => { return 42; }); 1`] = `

Filename: test/fixtures/inline.ts

  1 | import {test, it} from 'node:test';
  2 | test("x", () => { return 42; });

`;

exports[`no-test-return-statement > invalid(1): import {test, it} from 'node:test';\ntest(\"x\", () => { return 42; }); 2`] = `

Message:
  1 | import {test, it} from 'node:test';
> 2 | test("x", () => { return 42; });
    |                   ^^^^^^^^^^ Do not return a value from a test. Return a Promise to signal async completion, or return nothing.

`;

exports[`no-test-return-statement > invalid(2): import {test, it} from 'node:test';\ntest(\"x\", () => { return {a: 1}; }); 1`] = `

Filename: test/fixtures/inline.ts

  1 | import {test, it} from 'node:test';
  2 | test("x", () => { return {a: 1}; });

`;

exports[`no-test-return-statement > invalid(2): import {test, it} from 'node:test';\ntest(\"x\", () => { return {a: 1}; }); 2`] = `

Message:
  1 | import {test, it} from 'node:test';
> 2 | test("x", () => { return {a: 1}; });
    |                   ^^^^^^^^^^^^^^ Do not return a value from a test. Return a Promise to signal async completion, or return nothing.

`;

exports[`no-test-return-statement > invalid(3): import {test, it} from 'node:test';\ntest(\"x\", () => { return [1, 2]; }); 1`] = `

Filename: test/fixtures/inline.ts

  1 | import {test, it} from 'node:test';
  2 | test("x", () => { return [1, 2]; });

`;

exports[`no-test-return-statement > invalid(3): import {test, it} from 'node:test';\ntest(\"x\", () => { return [1, 2]; }); 2`] = `

Message:
  1 | import {test, it} from 'node:test';
> 2 | test("x", () => { return [1, 2]; });
    |                   ^^^^^^^^^^^^^^ Do not return a value from a test. Return a Promise to signal async completion, or return nothing.

`;

exports[`no-test-return-statement > invalid(4): import {test, it} from 'node:test';\ntest(\"x\", () => { return \"done\"; }); 1`] = `

Filename: test/fixtures/inline.ts

  1 | import {test, it} from 'node:test';
  2 | test("x", () => { return "done"; });

`;

exports[`no-test-return-statement > invalid(4): import {test, it} from 'node:test';\ntest(\"x\", () => { return \"done\"; }); 2`] = `

Message:
  1 | import {test, it} from 'node:test';
> 2 | test("x", () => { return "done"; });
    |                   ^^^^^^^^^^^^^^ Do not return a value from a test. Return a Promise to signal async completion, or return nothing.

`;

exports[`no-test-return-statement > invalid(5): import {test, it} from 'node:test';\ntest(\"x\", () => { const a = 1, b = 2; return a === b; }); 1`] = `

Filename: test/fixtures/inline.ts

  1 | import {test, it} from 'node:test';
  2 | test("x", () => { const a = 1, b = 2; return a === b; });

`;

exports[`no-test-return-statement > invalid(5): import {test, it} from 'node:test';\ntest(\"x\", () => { const a = 1, b = 2; return a === b; }); 2`] = `

Message:
  1 | import {test, it} from 'node:test';
> 2 | test("x", () => { const a = 1, b = 2; return a === b; });
    |                                       ^^^^^^^^^^^^^^^ Do not return a value from a test. Return a Promise to signal async completion, or return nothing.

`;

exports[`no-test-return-statement > invalid(6): import {test, it} from 'node:test';\nit(\"x\", () => { return 1; }); 1`] = `

Filename: test/fixtures/inline.ts

  1 | import {test, it} from 'node:test';
  2 | it("x", () => { return 1; });

`;

exports[`no-test-return-statement > invalid(6): import {test, it} from 'node:test';\nit(\"x\", () => { return 1; }); 2`] = `

Message:
  1 | import {test, it} from 'node:test';
> 2 | it("x", () => { return 1; });
    |                 ^^^^^^^^^ Do not return a value from a test. Return a Promise to signal async completion, or return nothing.

`;
